--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,22 @@
     <string name="btStatus">סטטוס</string>
     <string name="title_activity_definition">DefinitionActivity</string>
     <string name="icon">icon</string>
+
+    <string name="minPeriodLengthColumn">מינימום ימי מחזור</string>
+    <string name="regularColumn">סדיר/לא סדיר  </string>
+    <string name="prishaDaysColumn">ימי פרישה  </string>
+    <string name="periodLengthColumn">משך מחזור  </string>
+    <string name="ovulationNotificationColumn">ספירת נקיים  </string>
+    <string name="cleanNotificationColumn">תזכורת יומית לגלולה  </string>
+    <string name="countCleanColumn">תזכורת נקיים  </string>
+    <string name="dailyNotificationColumn">תזכורת ביוץ  </string>
+
+    <string name="minPeriodLengthColumnType">int</string>
+    <string name="regularColumnType">boolean</string>
+    <string name="prishaDaysColumnType">boolean</string>
+    <string name="periodLengthColumnType">int</string>
+    <string name="ovulationNotificationColumnType">int</string>
+    <string name="cleanNotificationColumnType">int</string>
+    <string name="countCleanColumnType">boolean</string>
+    <string name="dailyNotificationColumnType">boolean</string>
 </resources>
