--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="countCleanColumn">תזכורת נקיים  </string>
     <string name="dailyNotificationColumn">תזכורת ביוץ  </string>
 
+    <string name="defaultNote">אין הערות</string>
+
     <string name="lastPeriodDate">תאריך וסת אחרון</string>
     <string name="cleanCount">ספירת נקיים</string>
     <string name="periodLength">משך זמן מחזור </string>
@@ -28,7 +30,5 @@
     <string name="dateMikveh"> תאריך מקווה</string>
     <string name="prishaDate">  תאריך פרישה</string>
     <string name="nextPeriodDate"> תאריך וסת הבא </string>
-
-
 
 </resources>
