open dialog picker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
     <string name="prishaDate">  תאריך פרישה</string>
     <string name="nextPeriodDate"> תאריך וסת הבא </string>
 
+    <string name="btDialogStart">התחל ראיה</string>
+    <string name="btDialogEnd">הפסק ראיה</string>
+    <string name="btDialogSaveNote">שמירת הערה</string>
 </resources>
