commit string for Yael

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="btDialogStart">התחל ראיה</string>
     <string name="btDialogEnd">הפסק ראיה</string>
     <string name="btDialogSaveNote">שמירת הערה</string>
+    <string name="btClearDay">נקה יום</string>
 </resources>
