--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,6 @@
     <string name="nextPeriodNote">צפי וסת הבא</string>
 
 
-
-
     <string name="lastPeriodDate">תאריך וסת אחרון</string>
     <string name="cleanCount">ספירת נקיים</string>
     <string name="periodLength">משך זמן מחזור </string>
@@ -82,4 +80,5 @@
     <string name="onaNigth">לילה</string>
 
     <string name="NoteSaved">ההערה נשמרה</string>
+    <string name="title_activity_alarm_clear">alarm_clear</string>
 </resources>
